--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <link rel="stylesheet" type="text/css" href="swissqrbill.css" media="all" />
 
     <!-- We use the QR Code generator library by Nayuki (https://github.com/nayuki/QR-Code-generator) -->
-    <script type="application/javascript" src="https://gitcdn.link/repo/nayuki/Nayuki-web-published-code/master/qr-code-generator-library/qrcodegen.js"></script>
+    <script type="application/javascript" src="qrcodegen-1.6.js"></script>
 
   </head>
 
